# Object_detection

./: CMakeLists.txt  README.md
docs/: ClassStructure.md
docs/diagrams/: ClassStructure.puml
include/: queue_fps.h  yolo.h
include/gui/: window.h
include/model/: detection_output.h  model.h  output_layer.h  output_layers.h  postprocessor.h  preprocessor.h  region.h
include/utils/: cmd_line_parser.h  yolo_utils.h
resources/: conf.yml
src/: main.cpp  yolo.cpp
src/gui/: window.cpp
src/model/: detection_output.cpp  model.cpp  output_layer.cpp  output_layers.cpp  postprocessor.cpp  preprocessor.cpp  region.cpp
src/utils/: cmd_line_parser.cpp
test/: utest_placeholder.cpp
